objects/CRM_CampaignWizardReferenceData__c.object
<CustomObject>
    <fields>
        <fullName>CRM_CallToAction__c</fullName>
        <description>Reference data field which stores Call To Action picklist values.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores Call To Action picklist values.</inlineHelpText>
        <label>Call To Action</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Channel__c</fullName>
        <description>Reference data field which stores Channel picklist values.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores Channel picklist values.</inlineHelpText>
        <label>Channel</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_DemoEmail__c</fullName>
        <description>Reference data field which stores default Email value for Demographics criteria according to the channel value.</description>
        <inlineHelpText>Stores default Email value for Demographics criteria.</inlineHelpText>
        <label>Demographics Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doesn’t have an email address</fullName>
                </value>
                <value>
                    <fullName>Everyone</fullName>
                </value>
                <value>
                    <fullName>Has an email address</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t have an email address</fullName>
                    <isActive>false</isActive>
                    <label>Doesn&apos;t have an email address</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_DemoMailingAddress__c</fullName>
        <description>Reference data field which stores default Mailing Address value for Demographics criteria according to the channel value.</description>
        <inlineHelpText>Stores default Mailing Address value for Demographics criteria.</inlineHelpText>
        <label>Demographics Mailing Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doesn’t have a valid or foreign mailing address</fullName>
                </value>
                <value>
                    <fullName>Everyone</fullName>
                </value>
                <value>
                    <fullName>Has a valid or foreign mailing address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Reference data field to activate and deactivate picklistvalue .</description>
        <inlineHelpText>Activate value for piclkist .</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_IsCallToActionEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reference data field which enables call to action picklist for channel value.</description>
        <inlineHelpText>Enable call to action picklist for channel value.</inlineHelpText>
        <label>Is Call To Action Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_IsTargeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to mark channel as targeted or non targeted .</description>
        <inlineHelpText>Checkbox to mark channel as targeted or non targeted .</inlineHelpText>
        <label>Is Targeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_ParentServiceLineID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>field to maintain mapping between service line and sub service line records.</description>
        <inlineHelpText>Mapping for service line and sub service line records.</inlineHelpText>
        <label>Parent Service Line ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CRM_CampaignWizardReferenceData__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Service_Line</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_CampaignWizardReferenceData__c</referenceTo>
        <relationshipName>Campaign_Wizard_Reference_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_ParentServiceLine__c</fullName>
        <description>Field to store name of Parent Service Line.</description>
        <formula>CRM_ParentServiceLineID__r.CRM_ServiceLine__c</formula>
        <inlineHelpText>Field to store name of Parent Service Line.</inlineHelpText>
        <label>Parent Service Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ServiceLine__c</fullName>
        <description>Reference data field to store Service line picklist values for campaign wizard screen.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores service line picklist values for campaign wizard screen.</inlineHelpText>
        <label>Service Line</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_ServiceSubServiceLine__c</fullName>
        <description>Reference data field to store service lien and sub service line concatenated value .</description>
        <formula>CRM_ParentServiceLineID__r.CRM_ServiceLine__c + &apos; - &apos;+ CRM_SubServiceLine__c</formula>
        <inlineHelpText>Stores service line and sub service line concatenated value .</inlineHelpText>
        <label>Service-Sub Service Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_SubServiceLine__c</fullName>
        <description>Reference data field to store Sub Service line picklist values.</description>
        <inlineHelpText>Stores Sub Service line picklist values .</inlineHelpText>
        <label>Sub Service Line</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_VendorName__c</fullName>
        <description>Reference data field to store vendor name picklist value .</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores vendor name picklist value.</inlineHelpText>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Ref Data - Campaign Wizard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_ServiceLine__c</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignWizardReferenceData__c.Service_Line</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Call_To_Action</fullName>
        <columns>NAME</columns>
        <columns>CRM_CallToAction__c</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignWizardReferenceData__c.Call_To_Action</value>
        </filters>
        <label>Call To Action</label>
    </listViews>
    <listViews>
        <fullName>Channels</fullName>
        <columns>NAME</columns>
        <columns>CRM_Channel__c</columns>
        <columns>CRM_IsTargeted__c</columns>
        <columns>CRM_IsActive__c</columns>
        <columns>CRM_IsCallToActionEnabled__c</columns>
        <columns>CRM_DemoEmail__c</columns>
        <columns>CRM_DemoMailingAddress__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignWizardReferenceData__c.ChannelValues</value>
        </filters>
        <label>Channels</label>
    </listViews>
    <listViews>
        <fullName>Service_Line</fullName>
        <columns>NAME</columns>
        <columns>CRM_ServiceLine__c</columns>
        <columns>CRM_IsActive__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignWizardReferenceData__c.Service_Line</value>
        </filters>
        <label>Service Line</label>
    </listViews>
    <listViews>
        <fullName>Sub_Service_Line</fullName>
        <columns>NAME</columns>
        <columns>CRM_ParentServiceLineID__c</columns>
        <columns>CRM_SubServiceLine__c</columns>
        <columns>CRM_ParentServiceLine__c</columns>
        <columns>CRM_IsActive__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignWizardReferenceData__c.Sub_Service_Line</value>
        </filters>
        <label>Sub Service Line</label>
    </listViews>
    <listViews>
        <fullName>Vendor_Names</fullName>
        <columns>NAME</columns>
        <columns>CRM_VendorName__c</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_CampaignWizardReferenceData__c.Vendor_Name</value>
        </filters>
        <label>Vendor Names</label>
    </listViews>
    <nameField>
        <displayFormat>CWRD-{0000000}</displayFormat>
        <label>Campaign Reference Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ref Data - Campaign Wizard</pluralLabel>
    <recordTypes>
        <fullName>Call_To_Action</fullName>
        <active>true</active>
        <description>This record type records will be used to maintain Call To Action picklist on campaign wizard screen and it will only be available when channel value is Inbound</description>
        <label>Call To Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChannelValues</fullName>
        <active>true</active>
        <description>This record type records will be used to maintain Channel picklist and other dependent values on campaign wizard screen.</description>
        <label>Channel Values</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Line</fullName>
        <active>true</active>
        <description>This record type records will be used to maintain Service Line picklist on campaign wizard screen.</description>
        <label>Service Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Service_Line</fullName>
        <active>true</active>
        <description>This record type records will be used to maintain Sub Service Line picklist on campaign wizard screen which is dependent on service line values.</description>
        <label>Sub Service Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Name</fullName>
        <active>true</active>
        <description>This record type records will be used to maintain Vendor Name picklist on campaign wizard screen.</description>
        <label>Vendor Name</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RecordTypeChange</fullName>
        <active>true</active>
        <description>Restrict Record Type Change</description>
        <errorConditionFormula>AND ( 
ISCHANGED( RecordTypeId ) , $Profile.Name!=&apos;System Adminstrator&apos; 
)</errorConditionFormula>
        <errorMessage>Record Type Change is not allowed</errorMessage>
    </validationRules>
</CustomObject>